app/css/pages/editor.css
/* ... */
#page-editor {
    & .cm-editor {
        width: 100%;

        &.cm-focused,
        & .focus-visible {
            /* TODO: Find a way to set outline for a11y only */
            outline: none;
        }
        & .cm-panels-top {
            @apply border-0;
        }

        & .cm-scroller {
            @apply text-15 font-mono leading-160;
        }
        & .cm-gutters {
            @apply bg-backgroundColorB;
            @apply border-borderColor7;

            & .cm-lineNumbers .cm-gutterElement {
                @apply text-center text-textColor7;
                @apply px-16;
            }
            & .cm-foldGutter .cm-gutterElement {
                @apply pr-4;
                & span {
                    vertical-align: top;
                    line-height: 13px;
                    &[title="Unfold line"] {
                        line-height: 20px;
                    }
                }
            }
        }
        & .cm-content {
            @apply pt-0;
            & .cm-line {
                @apply pl-8 pr-8;
            }
        }
    }
}

/* General overrides */
/* #page-editor { */
/*     & .ace_editor { */
/*         line-height: 170%; */
/*     } */
/*     & .ace_gutter, */
/*     & .ace_gutter-layer { */
/*         width: 70px !important; */

/*         & .ace_gutter-cell { */
/*             padding-left: 0px !important; */
/*             padding-right: 16px !important; */
/*             text-align: center; */
/*         } */
/*     } */
/*     & .ace_scroller { */
/*         left: 70px !important; */
/*     } */
/*     & .ace_scroller.ace_scroll-left { */
/*         box-shadow: 17px 2px 16px -16px rgba(79, 114, 205, 0.3) inset; */
/*     } */

/*     /1* Stop brackets from filling the full line height *1/ */
/*     & .ace_bracket { */
/*         max-height: 20px; */
/*         margin-top: 3px; */
/*     } */
/*     & .ace_dialog.ace_dialog-bottom { */
/*         @apply border-t-1 border-borderColor6; */
/*         @apply bg-backgroundColorB; */
/*         @apply pl-16; */
/*         &, */
/*         & input { */
/*             @apply text-15 font-semibold font-mono; */
/*             @apply text-darkGreen; */
/*         } */
/*         & input { */
/*             @apply w-100; */
/*             background: transparent; */
/*             @apply pl-4; */
/*             &:focus { */
/*                 outline: none !important; */
/*                 border: none !important; */
/*                 box-shadow: none !important; */
/*             } */
/*         } */
/*     } */
/* } */

/* /1* Light theme overrides *1/ */
/* #page-editor .ace-tm { */
/*     & .ace_gutter { */
/*         @apply bg-backgroundColorA; */
/*     } */
/*     & .ace_gutter-cell { */
/*         @apply text-textColor7; */
/*     } */
/*     /1* Same as the content active line *1/ */
/*     & .ace_gutter-cell.ace_gutter-active-line { */
/*         background: rgba(0, 0, 0, 0.07) !important; */
/*     } */
/* } */

/* #page-editor .ace-cobalt { */
/*     & .ace_gutter, */
/*     & .ace_scroller { */
/*         @apply bg-backgroundColorA; */
/*     } */
/* } */

.c-modal.modal-editor-hints {
    & .--modal-content {
        max-width: 1100px;
    }
}

